--- a/_css/_home.scss
+++ b/_css/_home.scss
@@ -24,7 +24,7 @@
 }
 .home-masthead-carousel {
   flex: 0 0 35px;
-  margin-top: 30%;
+  padding-top: 30%;
   font-size: 30px;
   opacity: 0.3;
   color: #fff;
@@ -41,7 +41,6 @@
   @media (max-width: $screen-sm) {
     flex: none;
     width: 50%;
-    margin-top: 0;
     padding: 5px 10px 3px 10px;
     font-size: 20px;
     line-height: 1.5;
@@ -121,6 +120,10 @@
 }
 
 .getting-started {
+  section {
+    margin-bottom: 20px;
+  }
+  
   section.is-active pre {
     border-left-color: $brand-warning;
   }
