--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,16 +4,9 @@
 <header class="navbar navbar-static-top site-header" id="top" role="banner">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
       <a class="navbar-brand" href="{{ site.baseurl }}/">d3.compose</a>
     </div>
-    <nav class="collapse navbar-collapse" id="navigation">
+    <nav class="" id="navigation">
       <ul class="nav navbar-nav navbar-right">
         <li {% if page.url == "/index.html" %}class="active"{% endif %}><a href="{{ site.baseurl }}/">Getting Started</a></li>
         <li {% if page.url == "/examples/index.html" %}class="active"{% endif %}><a href="{{ site.baseurl }}/examples/">Examples</a></li>
