Getting started tweaks

--- a/_css/_home.scss
+++ b/_css/_home.scss
@@ -119,6 +119,11 @@
   }
 }
 
+.home-details {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
 .getting-started {
   section {
     margin-bottom: 20px;
