--- a/_includes/docs-downloads.html
+++ b/_includes/docs-downloads.html
@@ -11,7 +11,7 @@
 <tr>
   <td><a href="{{include.details.prod.path}}">{{include.details.prod.filename}}</a></td>
   <td>
-    <i>{{include.details.prod.size}}kb</i> {{include.production_notes}}
+    <i>{{include.details.prod.size}}kb</i> {{include.prod_notes}}
     <small>(<a href="{{include.details.map.path}}">Source Map</a>)</small>
   </td>
 </tr>
