--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="{{ site.baseurl }}/d3.compose.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600">
+    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600"> -->
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   </head>
   <body class="{{ page.class }}">
