Add Text and AxisTitle components
- Title component is used for traditional bolded title (no more
chart-title-main class needed)
- Text component is flexible component for adding text (Title extends
this)
- AxisTitle includes sensible defaults for axis titles (smaller and
better margins)

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,14 +1,4 @@
-/**
-  Base styles for d3.compose
-
-  Includes
-  - chart
-  - lines
-  - bars
-  - axis
-  - legend
-*/
-
+/* Base styles for d3.compose */
 .chart-compose {
   font-size: 14px;
   background-color: #fff;
@@ -24,19 +14,16 @@
 .chart-index-6 {stroke: #e377c2; fill: #e377c2;}
 .chart-index-7 {stroke: #7f7f7f; fill: #7f7f7f;}
 
-/* Lines */
 .chart-line {
   stroke-width: 1.5px;
   fill: none;
 }
 
-/* Bars */
 .chart-bar {
   stroke: none;
   shape-rendering: crispEdges;
 }
 
-/* Labels */
 .chart-label-text {
   font-size: 0.85em;
   stroke: none;
@@ -48,17 +35,15 @@
   stroke: none;
 }
 
-/* Title */
 .chart-title {
-  font-size: 1.1em;
-  font-weight: bold;
-}
-.chart-title-main {
   font-size: 1.2em;
   font-weight: bold;
 }
+.chart-axis-title {
+  font-size: 1.1em;
+  font-weight: bold;
+}
 
-/* Axis */
 .chart-axis {
   shape-rendering: crispEdges;
 }
@@ -74,7 +59,6 @@
   stroke: black;
 }
 
-/* Legend */
 .chart-legend-label {
   font-size: 0.9em;
 }
