Fix Axis for d3 v3.0.0

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -55,7 +55,7 @@
 .chart-axis .tick {
   font-size: 0.9em;
 }
-.chart-axis .tick line {
+.chart-axis .tick line, .chart-axis line.tick {
   stroke: black;
 }
 
