Add footer and about section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,3 +5,4 @@ layout: blank
 <article class="container content-container" id="content" role="main">
 {{ content }}
 </article>
+{% include footer.html %}
