Move about to separate page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,10 +8,11 @@
     </div>
     <nav class="" id="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li {% if page.url == "/index.html" %}class="active"{% endif %}><a href="{{ site.baseurl }}/">Getting Started</a></li>
-        <li {% if page.url == "/examples/index.html" %}class="active"{% endif %}><a href="{{ site.baseurl }}/examples/">Examples</a></li>
-        <li {% if page.url == "/docs/index.html" %}class="active"{% endif %}><a href="{{ site.baseurl }}/docs/">Docs</a></li>
+        <li{% if page.url == "/index.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/">Getting Started</a></li>
+        <li{% if page.url == "/examples/index.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/examples/">Examples</a></li>
+        <li{% if page.url == "/docs/index.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/docs/">Docs</a></li>
         <li><a href="https://github.com/CSNW/d3.compose" target="_blank">GitHub</a></li>
+        <li{% if page.url == "/about/index.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/about/">About</a></li>
       </ul>
     </nav>
   </div>
