--- a/css/main.scss
+++ b/css/main.scss
@@ -68,6 +68,13 @@ pre {
   }
 }
 
+.page {
+  background-color: #fff;
+  border: solid 1px #eee;
+  padding: 10px 20px;
+  box-shadow: 0px 0px 5px 0px #eee;
+}
+
 .site-footer {
   text-align: center;
   margin-top: 20px;
