--- a/_css/_home.scss
+++ b/_css/_home.scss
@@ -10,21 +10,21 @@
     padding-bottom: 20px;
   }
 }
-.home-masthead-content {
-
-}
+.home-masthead-content {}
 .home-masthead-carousel-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  position: relative;
 
+  @media (max-width: $screen-sm) {
+    margin-bottom: 40px;
+  }
   @media (min-width: $screen-md) {
     margin-left: -30px;
   }
 }
 .home-masthead-carousel {
-  flex: 0 0 35px;
-  padding-top: 30%;
+  position: absolute;
+  display: block;
+
   font-size: 30px;
   opacity: 0.3;
   color: #fff;
@@ -38,9 +38,16 @@
     opacity: 1;
   }
 
+  &[data-prev] {
+    left: 0;
+  }
+  &[data-next] {
+    right: 0;
+  }
+
   @media (max-width: $screen-sm) {
-    flex: none;
     width: 50%;
+
     padding: 5px 10px 3px 10px;
     font-size: 20px;
     line-height: 1.5;
@@ -50,11 +57,8 @@
     border: solid 1px #ddd;
     border-top: none;
 
-    &[data-prev] {
-      order: 1;
-    }
+    &[data-prev] {}
     &[data-next] {
-      order: 2;
       text-align: right;
       border-left: none;
     }
@@ -66,12 +70,16 @@
       color: $primary-color-dark;
     }
   }
+  @media (min-width: $screen-sm) {
+    top: 0;
+    height: 100%;
+    padding-top: 30%;
+  }
 }
 #home-chart {
-  flex: 0 0 100%;
-
   @media (min-width: $screen-sm) {
-    flex: 1;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
