--- a/integration/components/gridlines.html
+++ b/integration/components/gridlines.html
@@ -29,8 +29,8 @@
     var id = 1;
     function draw(props) {
       var chart = charts.append('svg').attr('id', 'chart-' + (id++));
-
-      d3c.render(d3c.gridlines(props), chart);
+      var container = new d3c.Compose(chart);
+      container.draw(d3c.gridlines(props));
     }
 
     draw({scale: d3.scale.linear()});
