--- a/integration/components/legend.html
+++ b/integration/components/legend.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>d3.compose - legend</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../.tmp/d3.compose.css">
+  <link rel="stylesheet" type="text/css" href="../../build/d3.compose.css">
   <style>
     .chart {
       float: left;
@@ -22,7 +22,7 @@
   <div id="charts"></div>
 
   <script src="../../node_modules/d3/d3.js"></script>
-  <script src="../../.tmp/d3.compose-all.js"></script>
+  <script src="../../build/d3.compose-all.js"></script>
   <script type="text/javascript">
     var charts = d3.select('#charts');
     var id = 1;
