--- a/integration/components/gridlines.html
+++ b/integration/components/gridlines.html
@@ -27,7 +27,7 @@
   <div id="charts"></div>
 
   <script src="../../node_modules/d3/d3.js"></script>
-  <script src="../../build/d3.compose-all.js"></script>
+  <script src="../../build/d3.compose.js"></script>
   <script type="text/javascript">
     var charts = d3.select('#charts');
     var id = 1;
